httpRoute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: retail-route
  namespace: praveen-ns
spec:
  parentRefs:
    - name: praveen-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            path: 
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: capsule-service
          port: 80
